working on trading mechanism.